--- a/particleworld/index.html
+++ b/particleworld/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Particle World</title>  
+  <title>Particle World</title>
   <link rel="stylesheet" href="style.css">
   <script src="lib/p5.js"></script>
   <script src="lib/p5.sound.js"></script>
@@ -13,12 +13,12 @@
 
 <body>
   <h1>Particle World</h1>
-  
+
   <div id="canvasWrapper">
     <!-- p5 canvas will be appended here. -->
   </div>
-    
-  <p>Description</p>
+
+  <p>Birds move across the screen along with the clouds</p>
 
   <!-- your script file should be included at the end of the body tag -->
   <!-- so that it can manipulate HTML elements above. -->
