--- a/projectbtemplate/index.html
+++ b/projectbtemplate/index.html
@@ -25,6 +25,14 @@
 
   </div>
 
+  <div id="keep-bottom">
+    <div id="scale-down">
+
+      <img src="imgs/redcar1.png" alt="redcar">
+    </div>
+  </div>
+
+
 </body>
 
 </html>
