--- a/projectbtemplate/index.html
+++ b/projectbtemplate/index.html
@@ -14,7 +14,7 @@
     <img src="imgs/images.png" alt="finishline" width="1605">
   </div>
   <div class="container-landing-page">
-    <h1>SPEED BUTTON</h1>
+    <h1>TURBO TAP</h1>
     <p>
       <a href="main.html">Link</a>
     </p>
