--- a/projectbtemplate/index.html
+++ b/projectbtemplate/index.html
@@ -5,34 +5,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project</title>
-
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <div id="keep-left">
+    <!-- Your images.png goes here -->
     <img src="imgs/images.png" alt="finishline" width="1605">
   </div>
+
+  <div id="race-track">
+    <!-- Your race track PNG goes here -->
+    <img src="imgs/race-track.jpg" alt="racetrack">
+  </div>
+
   <div class="container-landing-page">
     <h1>TURBO TAP</h1>
     <p>
-      <a href="main.html">Link</a>
+      <a href="main.html" class="linktext">Click Here</a>
     </p>
   </div>
 
   <div id="keep-bottom">
+    <!-- Your images.png goes here -->
     <img src="imgs/images.png" alt="finishline" width="1605">
-
   </div>
 
   <div id="keep-bottom">
     <div id="scale-down">
-
+      <!-- Your red car image goes here -->
       <img src="imgs/redcar1.png" alt="redcar">
     </div>
   </div>
-
-
 </body>
 
 </html>
