--- a/projectbtemplate/main.html
+++ b/projectbtemplate/main.html
@@ -24,20 +24,28 @@
     <script src="js/main.js"></script>
   </div>
 
-  <div class="flipcard-right">
-    <div class="flipcardinner-right">
-      <div class="flipcardfront-right">
+  <div id="race-track">
+    <!-- Your race track PNG goes here -->
+    <img src="imgs/race-track.jpg" alt="racetrack">
+  </div>
+
+  <div class="flipcard-right" id="keep-top">
+    <div class="flipcardinner-right" id="keep-top">
+      <div class="flipcardfront-right" id="keep-top">
         <p>
           Instructions
         </p>
       </div>
-      <div class="flipcardback-right">
+      <div class="flipcardback-right" id="keep-top">
         <p>
           keep pressing your designated button until you reach the finish line.
         </p>
       </div>
     </div>
   </div>
+
+  <div class="textcentered" id="keep-top">TURBO TAP</div>
+
 
   <div class="flipcard">
     <div class="flipcardinner">
