--- a/projectbtemplate/main.html
+++ b/projectbtemplate/main.html
@@ -53,7 +53,7 @@
       </div>
       <div class="flipcardback">
         <p>
-        <div>PLAYER 1: W</div>
+        <div>PLAYER 1: Q</div>
         <div>PLAYER 2: Z</div>
         <div>PLAYER 3: P</div>
         <div>PLAYER 4: M</div>
